# TheDailyWhiskers

./: .gitignore  Dockerfile  README.md  config.json  deploy.sh  invoke.sh  pyproject.toml  requirements.txt
dailywhiskers/: dailywhiskers.py  runner.py
git-hooks/: post-receive
infra/: cloudwatch.tf  iam.tf  lambda.tf  main.tf  outputs.tf  secrets.tf  sns.tf  variables.tf
requirements/: dev.txt  docker.txt
test/: sample.cats.json  sample.json  samplecatsearch.json  test_dailywhiskers.py  test_get_cat_pictures.py
thedailywhiskers/: dailywhiskers.py  email_template.html
thedailywhiskers.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
