[tool.poetry]
name = "thedailywhiskers"
version = "0.1.0"
description = "thedailywhiskers"
authors = ["Simon StJG <Simon.StJG@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"
boto3 = "^1.14.58"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
